parslers-benchmark/src/tests/invalid/syntaxErr/expressions/missingOperand2.wacc
# operator missing second operand

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  int b = 2 - 
end
